Bug 131022: Increase newsletter button z-index.
Had some problems with z-index height in the A/B tests, this fixes it.

--- a/kuma/static/styles/components/newsletter.styl
+++ b/kuma/static/styles/components/newsletter.styl
@@ -43,6 +43,7 @@
     position: absolute;
     top: $grid-spacing;
     bidi-style(right, $grid-spacing, left, auto);
+    z-index: 11;
 }
 
 .newsletter-thanks {
